[tool.poetry]
name = "aioaquacell"
version = "0.0.0"
description = "Asynchronous library to retrieve details of your Aquacell water softener device"
authors = ["Jordi Epema <jordi.epema@gmail.com>"]
maintainers = ["Jordi Epema <jordi.epema@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/Jordi1990/aioaquacell"
repository = "https://github.com/Jordi1990/aioaquacell"
documentation = "https://github.com/Jordi1990/aioaquacell"
packages = [
    { include = "aioaquacell" },
]

[tool.poetry.dependencies]
python = "^3.12"
attr = "^0.3.2"
boto3 = "^1.35.76"
aiohttp = "^3.11.10"
pycognito = "^2024.5.1"
aws-request-signer = "^1.2.0"
botocore = "^1.35.76"

[tool.poetry.dev-dependencies]
ruff = "^0.8.4"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
